added read file function and grab frequency of ascii chars for huff tree creation which will be implemented in later version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,9 @@ project(huffman_compressor C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(huffman_compressor src/main.c)
+add_executable(huffman_compressor src/main.c
+        src/frequency_table.h
+        src/huffman_tree.h
+        src/frequency_table.c
+        src/huffman_tree.c
+)
